--- a/public/styles/massText.sass
+++ b/public/styles/massText.sass
@@ -29,6 +29,7 @@
   //   background: none
   .title-wrapper
     width: 600px
+    margin-top: 60px
     h2
       color: black
       font-size: 80px
@@ -69,7 +70,7 @@
     .mass-text-block-container
       .title-wrapper
         width: 420px
-        margin-top: 55px
+        margin-top: 75px
         h2
           font-size: 60px
       textarea
@@ -80,10 +81,12 @@
 
 .mass-text-main-container
   @media(max-width: 460px)
+    .nav-display
+      height: 95vh
     .mass-text-block-container
       .title-wrapper
         width: 300px
-        margin-top: 65px
+        margin-top: 80px
         h2
           font-size: 50px
       textarea
