--- a/public/styles/default-message.sass
+++ b/public/styles/default-message.sass
@@ -6,9 +6,11 @@
 .default-message-main-container
   height: 100vh
   width: 100%
+  border: 1px solid transparent
   .title-wrapper
     width: 700px
     margin: 0 auto
+    margin-top: 60px
     h2
       color: black
       font-size: 80px
@@ -53,7 +55,7 @@
     margin: 0 auto
     margin-top: 40px
     ul
-      height: 200px
+      // height: 200px
       width: 600px
       background-color: white
       margin-bottom: 30px
@@ -63,13 +65,13 @@
       box-shadow: 0 0 1em rgba(0, 0, 0, 1)
       transition: .3s
       li
-        height: 30px
         color: black
         box-shadow: 0 0 .2em rgba(0, 0, 0, 1)
         transition: .4s
         padding: 8px
       input
-        // border-radius: 1px
+        height: 30px
+        width: 100%
         color: black
         box-shadow: 0 0 .2em rgba(0, 0, 0, 1)
         transition: .4s
@@ -104,3 +106,88 @@
 button
   background: none
   cursor: pointer
+
+
+.default-message-main-container
+  @media(max-width: 866px)
+    .title-wrapper
+      width: 500px
+      margin-top: 60px
+      h2
+        font-size: 60px
+      .default-message-underline
+        margin-top: 3px
+    .default-message-textarea-container
+      margin-top: 5px
+      textarea
+        width: 500px
+      button
+        margin-top: -20px
+        margin-bottom: 0px
+      .textarea-underline
+        width: 500px
+    .default-message-card-container
+      width: 500px
+      margin-top: 20px
+      ul
+        width: 500px
+        input
+          font-size: 15px
+
+.default-message-main-container
+  @media(max-width: 655px)
+    .title-wrapper
+      width: 400px
+      margin-top: 70px
+      h2
+        font-size: 49px
+      .default-message-underline
+        margin-top: 3px
+    .default-message-textarea-container
+      margin-top: 5px
+      textarea
+        width: 400px
+      button
+        margin-top: -20px
+        margin-bottom: 0px
+      .textarea-underline
+        width: 400px
+    .default-message-card-container
+      width: 400px
+      margin-top: 20px
+      ul
+        width: 400px
+        input
+          font-size: 15px
+        button
+          width: 115.6px
+          font-size: 15px
+
+.default-message-main-container
+  @media(max-width: 555px)
+    .title-wrapper
+      width: 300px
+      margin-top: 70px
+      h2
+        font-size: 37px
+      .default-message-underline
+        margin-top: 3px
+    .default-message-textarea-container
+      margin-top: 5px
+      textarea
+        width: 300px
+      button
+        margin-top: -20px
+        margin-bottom: 0px
+      .textarea-underline
+        width: 300px
+    .default-message-card-container
+      width: 300px
+      margin-top: 20px
+      ul
+        width: 300px
+        input
+          font-size: 15px
+        button
+          width: 82.3px
+          font-size: 15px
