--- a/public/styles/default-message.sass
+++ b/public/styles/default-message.sass
@@ -136,6 +136,10 @@ button
 
 .default-message-main-container
   @media(max-width: 655px)
+    .nav-display
+      height: 95vh
+      h3
+        font-size: 30px
     .title-wrapper
       width: 400px
       margin-top: 70px
@@ -165,6 +169,8 @@ button
 
 .default-message-main-container
   @media(max-width: 555px)
+    .nav-display
+      height: 95vh
     .title-wrapper
       width: 300px
       margin-top: 70px
@@ -191,3 +197,38 @@ button
         button
           width: 82.3px
           font-size: 15px
+
+.default-message-main-container
+  @media(max-width: 310px)
+    .nav-display
+      height: 95vh
+      h3
+        font-size: 20px
+    .title-wrapper
+      width: 220px
+      margin-top: 70px
+      h2
+        font-size: 27px
+      .default-message-underline
+        margin-top: 3px
+        margin-bottom: -5px
+    .default-message-textarea-container
+      textarea
+        width: 220px
+      button
+        margin-top: -20px
+        margin-bottom: 0px
+        font-size: 25px
+      .textarea-underline
+        width: 220px
+        margin-top: 20px
+    .default-message-card-container
+      width: 220px
+      margin-top: 15px
+      ul
+        width: 220px
+        input
+          font-size: 15px
+        button
+          width: 55.7px
+          font-size: 10px
