--- a/public/styles/login.sass
+++ b/public/styles/login.sass
@@ -99,3 +99,42 @@
       font-size: 20px
     button
       font-size: 40px
+
+.login-main-container
+  @media(max-width: 319px)
+    .nav-display
+      height: 95vh
+      h3
+        font-size: 30px
+.login-main-container
+  @media(max-width: 319px)
+    .login-block-container
+      .login-h1-container
+        h1
+          font-size: 50px
+      .login-underline
+        width: 270px
+      .login-login
+
+.login-main-container
+  @media(max-width: 290px)
+    .login-block-container
+      .login-h1-container
+        h1
+          font-size: 40px
+      .login-underline
+        width: 240px
+      .login-login
+        button
+          font-size: 35px
+.login-main-container
+  @media(max-width: 241px)
+    .login-block-container
+      .login-h1-container
+        h1
+          font-size: 40px
+      .login-underline
+        width: 220px
+      .login-login
+        button
+          font-size: 30px
