--- a/public/styles/newClient.sass
+++ b/public/styles/newClient.sass
@@ -192,6 +192,10 @@ span:nth-child(2)
 
 .newClient-main-container
   @media(max-width: 660px)
+    .nav-display
+      height: 95vh
+      h3
+        font-size: 30px
     .newClient-block-container
       .title-wrapper
         width: 400px
@@ -226,3 +230,43 @@ span:nth-child(2)
         font-size: 40px
     .nav-display
       height: 95vh
+
+.newClient-main-container
+  @media(max-width: 308px)
+    .newClient-block-container
+      .title-wrapper
+        width: 260px
+        margin-top: 50px
+        h2
+          font-size: 33px
+        .newClient-underline
+          margin-top: -2px
+          margin-bottom: -20px
+      input
+        width: 260px
+      button
+        font-size: 30px
+    .nav-display
+      height: 95vh
+      h3
+        font-size: 20px
+
+.newClient-main-container
+  @media(max-width: 274px)
+    .newClient-block-container
+      .title-wrapper
+        width: 220px
+        margin-top: 50px
+        h2
+          font-size: 35px
+        .newClient-underline
+          margin-top: -2px
+          margin-bottom: -20px
+      input
+        width: 220px
+      button
+        font-size: 30px
+    .nav-display
+      height: 95vh
+      h3
+        font-size: 20px
