--- a/public/views/register-tmpl.html
+++ b/public/views/register-tmpl.html
@@ -7,7 +7,7 @@
 
         <div class="register-underline animated fadeInUpBig"></div>
 
-        <form ng-submit="register(newUser)" class="login-register">
+        <form ng-submit="register(newUser)" class="register-register">
             <input class="name animated pulse" placeholder="Name" ng-model="newUser.name" />
             <input class="email animated pulse" placeholder="Email" type="email" ng-model="newUser.email" required />
             <input class="password animated pulse" placeholder="Password" type="password" ng-model="newUser.password" required />
