--- a/public/styles/clients.sass
+++ b/public/styles/clients.sass
@@ -108,6 +108,10 @@ button
 
 .clients-main-container
   @media(max-width: 660px)
+    .nav-display
+      height: 95vh
+      h3
+        font-size: 30px
     .clients-search-bar
       height: 200px
       display: flex
@@ -167,3 +171,48 @@ button
             height: 20px
             width: 206.5px
             margin-bottom: 5px
+
+
+.clients-main-container
+  @media(max-width: 310px)
+    .nav-display
+      height: 95vh
+      h3
+        font-size: 20px
+    .clients-search-bar
+      height: 90px
+      margin-top: 15px
+      input
+        height: 25px
+        width: 210px
+        font-size: 15px
+        text-align: center
+    .title-wrapper
+      width: 210px
+      margin-top: 62px
+      h2
+        font-size: 30px
+      .clients-underline
+        margin-top: 1px
+        margin-bottom: -5px
+    .clients-card-container
+      width: 210px
+      margin-top: 15px
+      ul
+        height: 310px
+        width: 210px
+        li
+          font-size: 12px
+        input
+          height: 20px
+          width: 167px
+          margin-bottom: 5px
+          font-size: 11px
+        .clients-button-container
+          height: 45px
+          margin-top: -7px
+          button
+            height: 20px
+            width: 100px
+            margin-bottom: 5px
+            font-size: 13px
