--- a/public/styles/csv.sass
+++ b/public/styles/csv.sass
@@ -52,6 +52,10 @@
 
 .csv-main-container
   @media(max-width: 650px)
+    .nav-display
+      height: 95vh
+      h3
+        font-size: 30px
     .csv-block-container
       .title-wrapper
         width: 400px
@@ -75,3 +79,20 @@
         height: 200px
         width: 230px
         margin-bottom: 100px
+
+.csv-main-container
+  @media(max-width: 310px)
+    .nav-display
+      height: 95vh
+      h3
+        font-size: 20px
+    .csv-block-container
+      .title-wrapper
+        width: 220px
+        margin-top: 60px
+        h2
+          font-size: 30px
+      button
+        height: 150px
+        width: 215px
+        margin-bottom: 30px
