--- a/public/styles/massText.sass
+++ b/public/styles/massText.sass
@@ -67,6 +67,10 @@
 
 .mass-text-main-container
   @media(max-width: 658px)
+    .nav-display
+      height: 95vh
+      h3
+        font-size: 30px
     .mass-text-block-container
       .title-wrapper
         width: 420px
@@ -94,3 +98,22 @@
         width: 250px
       button
         font-size: 50px
+
+.mass-text-main-container
+  @media(max-width: 310px)
+    .nav-display
+      height: 95vh
+      h3
+        font-size: 20px
+    .mass-text-block-container
+      .title-wrapper
+        width: 220px
+        margin-top: 80px
+        h2
+          font-size: 30px
+      textarea
+        height: 600px
+        width: 180px
+        font-size: 15px
+      button
+        font-size: 30px
