--- a/public/styles/register.sass
+++ b/public/styles/register.sass
@@ -15,7 +15,7 @@
 
 .register-block-container
   height: 100vh
-  width: 40%
+  width: 100%
 
 .register-h1-container
   height: 13vh
@@ -30,10 +30,11 @@
 
 .register-underline
   height: .75vh
-  width: 100%
+  width: 550px
   background-color: white
+  margin: 0 auto
 
-.login-register
+.register-register
   height: 84.25vh
   width: 100%
   background: black
@@ -53,7 +54,7 @@
     cursor: pointer
   input
     height: 7vh
-    width: 60%
+    width: 400px
     border-radius: 2px
     font-size: 30px
 
@@ -65,3 +66,60 @@
 
 .password:hover
   text-align: center
+
+
+
+.register-main-container
+  @media(max-width: 610px)
+    .nav-display
+      height: 95vh
+      h3
+        font-size: 30px
+.register-h1-container
+  @media(max-width: 610px)
+    h1
+      font-size: 60px
+.register-underline
+  @media(max-width: 610px)
+    width: 410px
+.register-register
+  @media(max-width: 610px)
+    input
+      height: 7vh
+      width: 300px
+      font-size: 20px
+    button
+      font-size: 40px
+
+.register-main-container
+  @media(max-width: 446px)
+    .register-block-container
+      .register-h1-container
+        h1
+          font-size: 50px
+      .register-underline
+        width: 350px
+      .register-register
+
+.register-main-container
+  @media(max-width: 365px)
+    .register-block-container
+      .register-h1-container
+        h1
+          font-size: 40px
+      .register-underline
+        width: 280px
+
+.register-main-container
+  @media(max-width: 315px)
+    .register-block-container
+      .register-h1-container
+        h1
+          font-size: 32px
+      .register-underline
+        width: 220px
+      .register-register
+        input
+          width: 220px
+        button
+          font-size: 30px
